--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -1,217 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile</title>
-    <link
-      rel="shortcut icon"
-      href="../static/favicon.ico"
-      type="image/x-icon"
-    />
-    <link href="../static/css/toasts.css" rel="stylesheet" />
-    <link href="../static/css/style.css" rel="stylesheet" />
 
-    <script src="../static/js/toasts.js" type="text/javascript"></script>
-    <script src="../static/js/lib.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Profile</title>
+  <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
+  <link href="../static/css/toasts.css" rel="stylesheet" />
+  <link href="../static/css/style.css" rel="stylesheet" />
 
-  <body>
-    <!-- PROFILE PAGE START HERE -->
-    <section class="profile-page">
-      <img
-        src="../static/images/left-overlay.png"
-        alt="overlay"
-        class="left-overlay"
-      />
-      <img
-        src="../static/images/right-overlay.png"
-        alt="overlay"
-        class="right-overlay"
-      />
-      <div class="container">
-        <div class="factory-logo">
-          <img src="../static/images/form-factory-logo.svg" alt="" />
-        </div>
-        <div class="profile-edit">
-          <div class="add-photo-wrapper">
-            <div class="profile-image">
-              <input
-                type="file"
-                id="file-input"
-                accept="image/*"
-                style="display: none"
-              />
-              {% if user.profile_picture_url %}
-              <img
-                src="../static/uploads/{{ user.profile_picture_url }}"
-                alt="фотография профиля"
-                id="profile-pic"
-              />
-              {% else %}
-              <img
-                src="../static/images/default-profile.png"
-                alt="фотография профиля"
-                id="profile-pic"
-              />
-              {% endif %}
-            </div>
-            <span>Добавьте фото</span>
-          </div>
-          <div class="edit-wrapper">
-            <button class="edit-btn">Edit</button>
-          </div>
-        </div>
-        <div class="profile-details">
-          <ul>
-            <li>
-              <h6>Имя</h6>
-              <span>
-                <input
-                  type="text"
-                  name="name"
-                  id="name"
-                  value="{{ user.name }}"
-                />
-              </span>
-            </li>
-            <li>
-              <h6>Пол</h6>
-              <div class="gender-switcher">
-                <p class="fieldset">
-                  {% if user.gender == "male" %}
-                  <input
-                    type="radio"
-                    name="gender-male"
-                    value="male"
-                    id="male"
-                    checked
-                  />
-                  {% else %}
-                  <input
-                    type="radio"
-                    name="gender-male"
-                    value="male"
-                    id="male"
-                  />
-                  {% endif %}
-                  <label for="male">Мужской</label>
+  <script src="../static/js/toasts.js" type="text/javascript"></script>
+  <script src="../static/js/lib.js"></script>
+</head>
 
-                  {% if user.gender == "female" %}
-                  <input
-                    type="radio"
-                    name="gender-female"
-                    value="female"
-                    id="female"
-                    checked
-                  />
-                  {% else %}
-                  <input
-                    type="radio"
-                    name="gender-female"
-                    value="female"
-                    id="female"
-                  />
-                  {% endif %}
-                  <label for="female">Женский </label>
-                  <span class="switch"></span>
-                </p>
-              </div>
-            </li>
-            <li>
-              <h6>Рост</h6>
-              <span>
-                <input
-                  type="text"
-                  name="height"
-                  id="height"
-                  value="{{ user.height }}"
-                />
-                см
-              </span>
-            </li>
-            <li>
-              <h6>Вес</h6>
-              <span>
-                <input
-                  type="text"
-                  name="weight"
-                  id="weight"
-                  value="{{ user.weight }}"
-                />
-                кг
-              </span>
-            </li>
-            <li>
-              <h6>Желаемый вес</h6>
-              <span>
-                <input
-                  type="text"
-                  name="desired-weight"
-                  id="desired-weight"
-                  value="{{ user.desired_weight }}"
-                />
-              </span>
-            </li>
-            <li>
-              <h6>Сколько вам лет?</h6>
-              <span>
-                <input type="text" name="age" id="age" value="{{ user.age }}" />
-              </span>
-            </li>
-          </ul>
+<body>
+  <!-- PROFILE PAGE START HERE -->
+  <section class="profile-page">
+    <img src="../static/images/left-overlay.png" alt="overlay" class="left-overlay" />
+    <img src="../static/images/right-overlay.png" alt="overlay" class="right-overlay" />
+    <div class="container">
+      <div class="factory-logo">
+        <img src="../static/images/fit-motive-logo.svg" alt="" />
+      </div>
+      <div class="profile-edit">
+        <div class="add-photo-wrapper">
+          <div class="profile-image">
+            <input type="file" id="file-input" accept="image/*" style="display: none" />
+            {% if user.profile_picture_url %}
+            <img src="../static/uploads/{{ user.profile_picture_url }}" alt="фотография профиля" class="img-responsive"
+              id="profile-pic" />
+            {% else %}
+            <img src="../static/images/default-profile.png" alt="фотография профиля" id="profile-pic"
+              class="img-responsive" />
+            {% endif %}
+          </div>
+          <span>Добавьте фото</span>
         </div>
-        <div class="skill-level-wrap">
-          <h6>Выберите уровень подготовки</h6>
-          <div class="btn-wraps">
-            <button
-              class="btn"
-              onclick="changeActivityLevel(1)"
-              id="btn-activity-level-1"
-            >
-              Начинающий
-              <div class="arrow-wrap">
-                <img src="../static/images/white-right-arrow.svg" alt="" />
-              </div>
-            </button>
-            <button
-              class="btn"
-              onclick="changeActivityLevel(2)"
-              id="btn-activity-level-2"
-            >
-              Опытный
-              <div class="arrow-wrap">
-                <img src="../static/images/white-right-arrow.svg" alt="" />
-              </div>
-            </button>
-            <button
-              class="btn"
-              onclick="changeActivityLevel(3)"
-              id="btn-activity-level-3"
-            >
-              Спортсмен
-              <div class="arrow-wrap">
-                <img src="../static/images/white-right-arrow.svg" alt="" />
-              </div>
-            </button>
-          </div>
-          <div class="ready-wrap">
-            <button class="btn" id="submit">Готово</button>
-          </div>
+        <div class="edit-wrapper">
+          <button class="edit-btn">Edit</button>
         </div>
       </div>
-    </section>
+      <div class="profile-details">
+        <ul>
+          <li>
+            <h6>Имя</h6>
 
-    <script>
-      var activityLevel = "{{ user.activity_level }}";
+            <span>
+              <input type="text" name="name" id="name" value="{{ user.name }}"
+                onkeypress="this.style.width = ((this.value.length + 1) * 8) + 'px';" />
+            </span>
+          </li>
+          <li>
+            <h6>Пол</h6>
+            <div class="gender-switcher">
+              <p class="fieldset">
+                {% if user.gender == "male" %}
+                <input type="radio" name="gender-male" value="male" id="male" checked />
+                {% else %}
+                <input type="radio" name="gender-male" value="male" id="male" />
+                {% endif %}
+                <label for="male">Мужской</label>
 
-      if (activityLevel != "0") {
-        document.getElementById(
-          `btn-activity-level-${activityLevel}`
-        ).style.backgroundColor = "#958be4";
-      }
-    </script>
+                {% if user.gender == "female" %}
+                <input type="radio" name="gender-female" value="female" id="female" checked />
+                {% else %}
+                <input type="radio" name="gender-female" value="female" id="female" />
+                {% endif %}
+                <label for="female">Женский </label>
+                <span class="switch"></span>
+              </p>
+            </div>
+          </li>
+          <li>
+            <h6>Рост</h6>
+            <span>
+              <input type="text" name="height" id="height" value="{{ user.height }}"
+                onkeypress="this.style.width = ((this.value.length + 1) * 8) + 'px';" />
+              см
+            </span>
+          </li>
+          <li>
+            <h6>Вес</h6>
+            <span>
+              <input type="text" name="weight" id="weight" value="{{ user.weight }}"
+                onkeypress="this.style.width = ((this.value.length + 1) * 8) + 'px';" />
+              кг
+            </span>
+          </li>
+          <li>
+            <h6>Желаемый вес</h6>
+            <span>
+              <input type="text" name="desired-weight" id="desired-weight" value="{{ user.desired_weight }}" />
+            </span>
+          </li>
+          <li>
+            <h6>Сколько вам лет?</h6>
+            <span>
+              <input type="text" name="age" id="age" value="{{ user.age }}" />
+            </span>
+          </li>
+        </ul>
+      </div>
+      <div class="skill-level-wrap">
+        <h6>Выберите уровень подготовки</h6>
+        <div class="btn-wraps">
+          <button class="btn" onclick="changeActivityLevel(1)" id="btn-activity-level-1">
+            Начинающий
+            <div class="arrow-wrap">
+              <img src="../static/images/white-right-arrow.svg" alt="" />
+            </div>
+          </button>
+          <button class="btn" onclick="changeActivityLevel(2)" id="btn-activity-level-2">
+            Опытный
+            <div class="arrow-wrap">
+              <img src="../static/images/white-right-arrow.svg" alt="" />
+            </div>
+          </button>
+          <button class="btn" onclick="changeActivityLevel(3)" id="btn-activity-level-3">
+            Спортсмен
+            <div class="arrow-wrap">
+              <img src="../static/images/white-right-arrow.svg" alt="" />
+            </div>
+          </button>
+        </div>
+        <div class="ready-wrap">
+          <button class="btn" id="submit">Готово</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="../static/js/profile.js" defer></script>
-  </body>
+  <script>
+    var activityLevel = "{{ user.activity_level }}";
+
+    if (activityLevel != "0") {
+      document.getElementById(
+        `btn-activity-level-${activityLevel}`
+      ).style.backgroundColor = "#958be4";
+    }
+  </script>
+
+  <script src="../static/js/profile.js" defer></script>
+</body>
+
 </html>
