--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -1,87 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
-    <link
-      rel="shortcut icon"
-      href="../static/favicon.ico"
-      type="image/x-icon"
-    />
-    <link href="../static/css/toasts.css" rel="stylesheet" />
-    <link href="../static/css/style.css" rel="stylesheet" />
 
-    <script src="../static/js/toasts.js" type="text/javascript"></script>
-    <script src="../static/js/lib.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Register</title>
+  <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
+  <link href="../static/css/toasts.css" rel="stylesheet" />
+  <link href="../static/css/style.css" rel="stylesheet" />
 
-  <body>
-    <!-- SIGNUP PAGE START HERE -->
-    <section class="login-page">
-      <div class="top-logo-part">
-        <div class="container">
-          <div class="main-logo">
-            <img src="../static/images/white-logo.svg" alt="white-logo" />
+  <script src="../static/js/toasts.js" type="text/javascript"></script>
+  <script src="../static/js/lib.js"></script>
+</head>
+
+<body>
+  <!-- SIGNUP PAGE START HERE -->
+  <section class="login-page">
+    <div class="top-logo-part">
+      <div class="container">
+        <div class="main-logo">
+          <img src="../static/images/white-logo.svg" alt="white-logo" />
+        </div>
+      </div>
+    </div>
+    <div class="main-login-section">
+      <div class="container">
+        <div class="company-name text-center">
+          <h1>Fit Motive</h1>
+        </div>
+        <div class="login-image">
+          <img src="./static/images/login-image.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="topic text-center">
+          <h6>
+            Персональный тренер - нейросеть 24/7. Тренируйся где и когда тебе
+            удобно.
+          </h6>
+        </div>
+        <div class="form-part mt-45">
+          <div class="white-form">
+            <div class="flex-column gap-20">
+              <div class="input-wraps">
+                <label for="">Ваше имя</label>
+                <input type="text" placeholder="Jhon" id="name" />
+              </div>
+              <div class="input-wraps">
+                <label for="">Email или телефон</label>
+                <input type="text" placeholder="example@gmail.com" id="email" />
+              </div>
+              <div class="input-wraps">
+                <label for="">Пароль</label>
+                <input type="text" placeholder="......." id="password" />
+                <div class="pw-shown">
+                  <img src="../static/images/eye.svg" alt="" id="eye" />
+                </div>
+              </div>
+            </div>
+            <div class="check-wrap">
+              <input type="checkbox" name="" id="check" checked />
+              <span>Я принимаю правила и условия</span>
+            </div>
+          </div>
+          <div class="btn-wrap">
+            <button class="btn" id="submit">Войти</button>
+          </div>
+          <div class="account-check-wrap">
+            <!-- <a href="">Забыл пароль?</a> -->
+            <a href="/login">У меня уже есть мой аккаунт</a>
           </div>
         </div>
       </div>
-      <div class="main-login-section">
-        <div class="container">
-          <div class="company-name text-center">
-            <h1>Form Factory</h1>
-          </div>
-          <div class="login-image">
-            <img
-              src="../static/images/login-image.png"
-              alt=""
-              class="img-responsive"
-            />
-          </div>
-          <div class="topic text-center">
-            <h6>НИКАКИХ ОГРАНИЧЕНИЙ, ТОЛЬКО ВОЗМОЖНОСТИ</h6>
-          </div>
-          <div class="form-part mt-45">
-            <div class="white-form">
-              <div class="flex-column gap-20">
-                <div class="input-wraps">
-                  <label for="">Ваше имя</label>
-                  <input type="text" placeholder="Jhon" id="name" />
-                </div>
-                <div class="input-wraps">
-                  <label for="">Email или телефон</label>
-                  <input
-                    type="text"
-                    placeholder="example@gmail.com"
-                    id="email"
-                  />
-                </div>
-                <div class="input-wraps">
-                  <label for="">Пароль</label>
-                  <input type="text" placeholder="......." id="password" />
-                  <div class="pw-shown">
-                    <img src="../static/images/eye.svg" alt="" id="eye" />
-                  </div>
-                </div>
-              </div>
-              <div class="check-wrap">
-                <input type="checkbox" name="" id="check" checked />
-                <span>Я принимаю правила и условия</span>
-              </div>
-            </div>
-            <div class="btn-wrap">
-              <button class="btn" id="submit">Войти</button>
-            </div>
-            <div class="account-check-wrap">
-              <!-- <a href="">Забыл пароль?</a> -->
-              <a href="/login">У меня уже есть мой аккаунт</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- SIGNUP PAGE START HERE -->
+    </div>
+  </section>
+  <!-- SIGNUP PAGE START HERE -->
 
-    <script src="../static/js/register.js" defer></script>
-  </body>
+  <script src="../static/js/register.js" defer></script>
+</body>
+
 </html>
