--- a/server/app/templates/forget-password.html
+++ b/server/app/templates/forget-password.html
@@ -1,88 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forget Password</title>
-    <link
-      rel="shortcut icon"
-      href="../static/favicon.ico"
-      type="image/x-icon"
-    />
-    <link href="../static/css/toasts.css" rel="stylesheet" />
-    <link href="../static/css/style.css" rel="stylesheet" />
 
-    <script src="../static/js/toasts.js" type="text/javascript"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Forget Password</title>
+  <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
+  <link href="../static/css/toasts.css" rel="stylesheet" />
+  <link href="../static/css/style.css" rel="stylesheet" />
 
-  <body>
-    <!-- LOGIN PAGE START HERE -->
-    <section class="login-page">
-      <div class="top-logo-part">
-        <div class="container">
-          <div class="top-part-wrap">
-            <div
-              class="back-btn"
-              onclick="window.location.href = '/login';"
-              style="cursor: pointer"
-            >
-              <img src="./static/images/angle-left.svg" alt="angle-arrow" />
-              <h3>Назад</h3>
-            </div>
-            <div class="logo-wrap">
-              <img src="./static/images/white-logo.svg" alt="logo" />
-            </div>
+  <script src="../static/js/toasts.js" type="text/javascript"></script>
+</head>
+
+<body>
+  <!-- LOGIN PAGE START HERE -->
+  <section class="login-page">
+    <div class="top-logo-part">
+      <div class="container">
+        <div class="top-part-wrap">
+          <div class="back-btn" onclick="window.location.href = '/login';" style="cursor: pointer">
+            <img src="./static/images/angle-left.svg" alt="angle-arrow" />
+            <h3>Назад</h3>
+          </div>
+          <div class="logo-wrap">
+            <img src="./static/images/white-logo.svg" alt="logo" />
           </div>
         </div>
       </div>
-      <div class="main-login-section">
-        <div class="container">
-          <div class="company-name text-center">
-            <h1>Fit Motive</h1>
-          </div>
-          <div class="login-image">
-            <img
-              src="./static/images/login-image.jpg"
-              alt=""
-              class="img-responsive"
-            />
-          </div>
-          <div class="topic text-center">
-            <h6>
-              Персональный тренер - нейросеть 24/7. Тренируйся где и когда тебе
-              удобно.
-            </h6>
-          </div>
-          <div class="form-part mt-45">
-            <div class="white-form">
-              <div class="flex-column gap-20">
-                <div class="input-wraps">
-                  <label for="email">Email или телефон</label>
-                  <input
-                    type="text"
-                    id="email"
-                    placeholder="example@gmail.com"
-                  />
-                </div>
-              </div>
-              <div class="check-wrap">
-                <input type="checkbox" id="tos-agreement" checked />
-                <span>Согласие на обработку персональных данных</span>
+    </div>
+    <div class="main-login-section">
+      <div class="container">
+        <div class="company-name text-center">
+          <h1>Fit Motive</h1>
+        </div>
+        <div class="login-image">
+          <img src="./static/images/login-image.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="topic text-center">
+          <h6>
+            Персональный тренер - нейросеть 24/7. Тренируйся где и когда тебе
+            удобно.
+          </h6>
+        </div>
+        <div class="form-part mt-45">
+          <div class="white-form">
+            <div class="flex-column gap-20">
+              <div class="input-wraps">
+                <label for="email">Email или телефон</label>
+                <input type="text" id="email" placeholder="example@gmail.com" />
               </div>
             </div>
-            <div class="btn-wrap">
-              <button class="btn" id="submit">Восстановить пароль</button>
+            <div class="check-wrap">
+              <input type="checkbox" id="tos-agreement" checked />
+              <span>Согласие на обработку персональных данных</span>
             </div>
+          </div>
+          <div class="btn-wrap">
+            <button class="btn" id="submit">Восстановить пароль</button>
           </div>
         </div>
       </div>
-    </section>
-    <!-- LOGIN PAGE START HERE -->
+    </div>
+  </section>
+  <!-- LOGIN PAGE START HERE -->
 
-    <script
-      src="../static/js/forgetPassword.js"
-      type="text/javascript"
-      defer
-    ></script>
-  </body>
+  <script src="../static/js/forgetPassword.js" type="text/javascript" defer></script>
+</body>
+
 </html>
