feat: removed unused code

--- a/server/app/templates/add-workout.html
+++ b/server/app/templates/add-workout.html
@@ -104,108 +104,7 @@
           <h3>Упражнения</h3>
         </div>
         <div class="workout-name-wraps mt-60" id="workout-container">
-          <div class="workout-card new">
-            <img
-              src="../static/images/exercise-1.png"
-              alt=""
-              class="exercise-img"
-            />
-            <h4>Велосипед</h4>
-            <img src="../static/images/add-btn.svg" alt="" />
-            <div class="exercise-popup-wraps">
-              <div class="exercise-pop-wrapper">
-                <h4>Велосипед</h4>
-                <div class="workout">
-                  <img src="../static/images/exercise-1.png" alt="" />
-                </div>
-                <div class="timer-count">
-                  <div class="plus-minus">
-                    <img src="../static/images/minus.svg" alt="" />
-                  </div>
-                  <div class="timer-wraps">
-                    <span>0:10</span>
-                  </div>
-                  <div class="plus-minus">
-                    <img src="../static/images/plus.svg" alt="" />
-                  </div>
-                </div>
-                <div class="flex align-center add-flex gap-20">
-                  <button class="btn">Добавить</button>
-                  <div class="cross">
-                    <img src="../static/images/cross.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="workout-card new">
-            <img
-              src="../static/images/exercise-1.png"
-              alt=""
-              class="exercise-img"
-            />
-            <h4>Планка</h4>
-            <img src="../static/images/add-btn.svg" alt="" />
-            <div class="exercise-popup-wraps">
-              <div class="exercise-pop-wrapper">
-                <h4>Планка</h4>
-                <div class="workout">
-                  <img src="../static/images/plank.png" alt="" />
-                </div>
-                <div class="timer-count">
-                  <div class="plus-minus">
-                    <img src="../static/images/minus.svg" alt="" />
-                  </div>
-                  <div class="timer-wraps">
-                    <span>0:10</span>
-                  </div>
-                  <div class="plus-minus">
-                    <img src="../static/images/plus.svg" alt="" />
-                  </div>
-                </div>
-                <div class="flex align-center add-flex gap-20">
-                  <button class="btn">Добавить</button>
-                  <div class="cross">
-                    <img src="../static/images/cross.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="workout-card new">
-            <img
-              src="../static/images/exercise-1.png"
-              alt=""
-              class="exercise-img"
-            />
-            <h4>Берпи</h4>
-            <img src="../static/images/add-btn.svg" alt="" />
-            <div class="exercise-popup-wraps">
-              <div class="exercise-pop-wrapper">
-                <h4>Берпи</h4>
-                <div class="workout">
-                  <img src="../static/images/burpee.png" alt="" />
-                </div>
-                <div class="timer-count">
-                  <div class="plus-minus">
-                    <img src="../static/images/minus.svg" alt="" />
-                  </div>
-                  <div class="timer-wraps">
-                    <span>0:10</span>
-                  </div>
-                  <div class="plus-minus">
-                    <img src="../static/images/plus.svg" alt="" />
-                  </div>
-                </div>
-                <div class="flex align-center add-flex gap-20">
-                  <button class="btn">Добавить</button>
-                  <div class="cross">
-                    <img src="../static/images/cross.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <!-- Workouts stay here -->
         </div>
         <div class="btn-wraps">
           <button
